Corregido AUTH para producción y descarga de PDF/XML

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 PORT=
-FACTURAMA_AUTH=
 FACTURAMA_USER=
 FACTURAMA_PASS=
 MAIL_HOST=
@@ -10,3 +9,4 @@ TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_WHATSAPP_FROM=
 GEMINI_API_KEY=
+GOOGLE_CREDENTIALS=
